# allcode

./: .gitignore  README.md  requirements.txt  setup.cfg  template.py
src/allcode/: buggy.py  serial_comms.py
src/allcode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/allcode/devices/: buttons.py
