[metadata]
name = allcode
version = 2.0.0
author = Bill Crawford
author_email = bill.crawford@forthvalley.ac.uk
description = A Matrix TSL Buggy API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pyserial>=3.5

[options.packages.find]
where = src

[options.package_data]
"":[*/*.md]